--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "outDir": "lib/"
     },
     "files": [
+    	"./typings/index.d.ts",
         "./src/index.ts",
         "./src/type-checker.ts"
     ]
