--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "typescript": "^1.8.10",
     "typings": "^1.3.3",
     "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "d3": "^4.2.2"
   }
 }
