--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "stylus": "^0.54.5",
     "typescript": "^1.8.10",
     "typings": "^1.3.3",
-    "webpack": "^1.13.1"
-  },
-  "dependencies": {
+    "webpack": "^1.13.1",
     "d3": "^4.2.2"
   }
 }
